syntax = "proto3";

import "google/protobuf/timestamp.proto";
package RecipeProto;

service GrpcRecipe {
    rpc GetAllTags(GrpcEmpty) returns (GrpcListTagDTO);
    rpc GetRecipeDetails(GrpcRecipeIdRequest) returns (GrpcRecipeDetailsDTO);
    rpc GetSimpleRecipes(GrpcGetSimpleRecipeRequest) returns (GrpcMapSimpleRecipes);
    rpc GetSimpleComments(GrpcGetSimpleCommentRequest) returns (GrpcMapSimpleComments);
    rpc SearchSimpleRecipes(GrpcSearchSimpleRecipeRequest) returns (GrpcMapSimpleRecipes);
    rpc GetCommentReports(GrpcGetCommentReportRequest) returns (GrpcMapSimpleComments);
}
////////////////////////// COMMON
message GrpcEmpty {}

message GrpcRecipeIdRequest{
    string RecipeId = 1;
}

message GrpcGetSimpleRecipeRequest {
    string AccountId = 1;
    repeated string RecipeIds = 2; 
}

message GrpcGetSimpleCommentRequest {
    repeated string Ids = 1; // Key syntax is recipeId~commentId
}

message GrpcGetCommentReportRequest {
    repeated string Ids = 1;
}

message GrpcSearchSimpleRecipeRequest {
    string AccountId = 1;
    repeated string RecipeIds = 2; 
    string Keyword = 3;
}
///////////////////////// Entity DTO
message GrpcRecipeDetailsDTO{
    string Id = 1;
    string AuthorId = 2;
    string Title = 3;
    string Description = 4;
    string ImageUrl = 5;
    string Ingredients = 6;
    bool IsActive = 7;
    int32 VoteDiff = 8;
    int32 NumberOfComment = 9;
    int32 TotalView = 10;
    string CookTime = 11;
    int32 Serves = 12;
    repeated GrpcStepDTO Steps = 13;
    repeated GrpcCommentDTO Comments = 14;
}

message GrpcStepDTO{
    int32 OrdinalNumber = 1;
    string Content = 2;
    repeated string AttachedImageUrls = 3;
}

message GrpcCommentDTO {
    string Id = 1;
    string Content = 2;
    string AccountId = 3;
    bool IsActive = 4;
}

message GrpcListTagDTO{
    repeated GrpcTagDTO Tags = 1;
}

message GrpcTagDTO{
    string Id = 1;
    string Value = 2;
    string Code = 3;
    string Category = 4;
    string Status = 5;
    string ImageUrl = 6;
}

message GrpcRecipeVoteDTO{
    string Id = 1;
    string AccountId = 2;
    bool IsUpvote = 3;
}

message GrpcRecipeTagDTO{
    string Id = 1;
    string RecipeId = 2;
    string TagId = 3;
}

message GrpcMapSimpleRecipes {
    map<string, GrpcSimpleRecipe> Recipes = 1;
}

message GrpcMapSimpleComments {
    map<string, GrpcSimpleComment> Comments = 1;
}

message GrpcSimpleRecipe {
    string Id = 1;
    string AuthorId = 2;
    string RecipeImgUrl = 3;
    string Title = 4;
    string Description = 5;
    int32 VoteDiff = 6;
    int32 NumberOfComment = 7;
    string AuthorUsername = 8;
    string AuthorDisplayName = 9;
    string AuthorAvtUrl = 10;
    string Vote = 11;
    google.protobuf.Timestamp CreatedAt = 12;
    google.protobuf.Timestamp UpdatedAt = 13;
}

message GrpcSimpleComment {
    string Id = 1;
    string AuthorId = 2;
    string AuthorUsername = 3;
    string AuthorDisplayName = 4;
    string AuthorAvatarURL = 5;
    string Content = 6;
    bool IsActive = 7;
    google.protobuf.Timestamp CreatedAt = 8;
    google.protobuf.Timestamp UpdatedAt = 9;
}

message GrpcCommentReport {
    string Id = 1;
    string ReporterUsername = 2;
    string ReporterDisplayName = 3;
    string ReporterAvatarURL = 4;
    repeated string Reasons = 5;
    string AdditionalDetail = 6;
    string Status = 7;
    google.protobuf.Timestamp CreatedAt = 8;
}

message GrpcCommentReportResponse {
    GrpcSimpleRecipe Recipe = 1;
    GrpcSimpleComment Comment = 2;
    GrpcCommentReport Report = 3;
}

message GrpcMapCommentReports {
    map<string, GrpcCommentReportResponse> CommentReports = 1;
}